[gd_scene load_steps=13 format=3 uid="uid://btpfgj8syn123"]

[ext_resource type="PackedScene" uid="uid://cmorv5pyx4phn" path="res://scripts/classes/menus.tscn" id="1_0eo41"]
[ext_resource type="Texture2D" uid="uid://dj78t7fk71vl0" path="res://assets/sprites/ui/menu_background.png" id="2_20xdo"]
[ext_resource type="Script" path="res://ui/menus/end_game.gd" id="2_qq6ao"]
[ext_resource type="Theme" uid="uid://cgi8bxd4ey6hu" path="res://assets/themes/title_theme.tres" id="3_7qyiu"]
[ext_resource type="Texture2D" uid="uid://b5he6l7cp7o27" path="res://assets/sprites/ui/Line 1.svg" id="4_wc6hf"]
[ext_resource type="Theme" uid="uid://b4q7bpijyr7ol" path="res://assets/themes/Objective_label_theme.tres" id="5_853k5"]
[ext_resource type="Theme" uid="uid://dcgvgel77iwan" path="res://assets/themes/objective_xp_theme.tres" id="6_52ngq"]
[ext_resource type="Theme" uid="uid://cqajmgbj0kgsk" path="res://assets/themes/progress_bar_theme.tres" id="7_3073i"]
[ext_resource type="Theme" uid="uid://d4gsvekoqjros" path="res://assets/themes/icon__menu_panel_theme.tres" id="8_jqjr5"]
[ext_resource type="Texture2D" uid="uid://ct27x2ccpt4bt" path="res://assets/sprites/ui/coin.png" id="9_c5211"]
[ext_resource type="Theme" uid="uid://bp21tk2vfowe5" path="res://assets/themes/xp_icon_theme.tres" id="10_u4im5"]
[ext_resource type="Theme" uid="uid://ces6mx84dvs8r" path="res://assets/themes/button_theme.tres" id="11_fovs4"]

[node name="EndGame" instance=ExtResource("1_0eo41")]
script = ExtResource("2_qq6ao")

[node name="BG" type="TextureRect" parent="." index="1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.43
anchor_bottom = 1.0
offset_left = -1.24335
offset_right = 1.24335
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_20xdo")
expand_mode = 3

[node name="Container" type="VBoxContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.35
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 60.0
offset_right = -40.0
size_flags_vertical = 0

[node name="ObjectivesLabel" type="Label" parent="Container" index="0"]
layout_mode = 2
theme = ExtResource("3_7qyiu")
text = "Objetivos"

[node name="Separator" type="TextureRect" parent="Container" index="1"]
layout_mode = 2
texture = ExtResource("4_wc6hf")

[node name="Spacer" type="MarginContainer" parent="Container" index="2"]
layout_mode = 2
theme_override_constants/margin_bottom = 16

[node name="Objectives" type="VBoxContainer" parent="Container" index="3"]
layout_mode = 2

[node name="Obj1" type="HBoxContainer" parent="Container/Objectives" index="0"]
layout_mode = 2

[node name="Obj1Label" type="Label" parent="Container/Objectives/Obj1" index="0"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_853k5")
text = "Colete 50 moedas"

[node name="Obj1XP" type="Label" parent="Container/Objectives/Obj1" index="1"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("6_52ngq")
text = "5000 xp"

[node name="Obj1Bar" type="ProgressBar" parent="Container/Objectives" index="1" groups=["progress_bar"]]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_3073i")

[node name="Obj2" type="HBoxContainer" parent="Container/Objectives" index="2"]
layout_mode = 2

[node name="Obj2Label" type="Label" parent="Container/Objectives/Obj2" index="0"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_853k5")
text = "Fa√ßa 15 pegadinhas"

[node name="Obj2XP" type="Label" parent="Container/Objectives/Obj2" index="1"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("6_52ngq")
text = "5000 xp"

[node name="Obj2Bar" type="ProgressBar" parent="Container/Objectives" index="3" groups=["progress_bar"]]
layout_mode = 2
theme = ExtResource("7_3073i")

[node name="Spacer2" type="MarginContainer" parent="Container" index="4"]
layout_mode = 2
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="Container" index="5"]
layout_mode = 2
theme = ExtResource("3_7qyiu")
text = "Resultado final"

[node name="Separator2" type="TextureRect" parent="Container" index="6"]
layout_mode = 2
texture = ExtResource("4_wc6hf")

[node name="Spacer3" type="MarginContainer" parent="Container" index="7"]
layout_mode = 2
theme_override_constants/margin_bottom = 16

[node name="Coins" type="HBoxContainer" parent="Container" index="8"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconBox" type="PanelContainer" parent="Container/Coins" index="0"]
layout_mode = 2
theme = ExtResource("8_jqjr5")

[node name="Icon" type="TextureRect" parent="Container/Coins/IconBox" index="0"]
layout_mode = 2
texture = ExtResource("9_c5211")
expand_mode = 2

[node name="CoinsLabel" type="Label" parent="Container/Coins" index="1"]
layout_mode = 2
theme = ExtResource("5_853k5")
theme_override_font_sizes/font_size = 32
text = "10"

[node name="Score" type="HBoxContainer" parent="Container" index="9"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconBox" type="PanelContainer" parent="Container/Score" index="0"]
layout_mode = 2
theme = ExtResource("8_jqjr5")

[node name="IconLabel" type="Label" parent="Container/Score/IconBox" index="0"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("10_u4im5")
theme_override_colors/font_color = Color(0.470588, 0.396078, 0.917647, 1)
theme_override_font_sizes/font_size = 28
text = "XP"

[node name="ScoreLabel" type="Label" parent="Container/Score" index="1"]
layout_mode = 2
theme = ExtResource("5_853k5")
theme_override_font_sizes/font_size = 32
text = "10"

[node name="RestartGame" type="Button" parent="." index="3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.35
anchor_bottom = 1.0
offset_left = 40.0
offset_right = -40.0
offset_bottom = -80.0
grow_vertical = 0
theme = ExtResource("11_fovs4")
text = "Retornar ao menu principal"

[connection signal="pressed" from="RestartGame" to="." method="_on_restart_game_pressed"]
